feat: 23.01.27 공부파일 upload

--- a/spring_workbook/CH5/b01/src/main/resources/templates/Board/list.html
+++ b/spring_workbook/CH5/b01/src/main/resources/templates/Board/list.html
@@ -123,4 +123,11 @@
 
     },false)
 
+    //show model
+    const result = [[${result}]]
+
+    if (result) {
+        alert(result)
+    }
+
 </script>
